@@ -109,29 +109,13 @@
 
 <build>
 <plugins>
-    <!-- Плагин для компиляции и включения процессоров аннотаций -->
     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
-            <source>17</source> <!-- Укажите вашу версию JDK -->
+            <source>17</source>
             <target>17</target>
-            <compilerArgs>
-                <arg>-proc:full</arg>
-            </compilerArgs><!-- Укажите вашу версию JDK -->
-<!--            <annotationProcessorPaths>-->
-<!--                <annotationProcessorPath>-->
-<!--                    <groupId>org.mapstruct</groupId>-->
-<!--                    <artifactId>mapstruct-processor</artifactId>-->
-<!--                    <version>1.5.5.Final</version>-->
-<!--                </annotationProcessorPath>-->
-<!--                <annotationProcessorPath>-->
-<!--                    <groupId>org.project-lombok</groupId>-->
-<!--                    <artifactId>lombok</artifactId>-->
-<!--                    <version>1.18.30</version>-->
-<!--                </annotationProcessorPath>-->
-<!--            </annotationProcessorPaths>-->
         </configuration>
     </plugin>
 </plugins>
